<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoreDetails">

    <android.support.v7.widget.CardView
        android:id="@+id/voltageVal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/dataCardBackground"
        app:cardCornerRadius="0dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/voltageTitle"
        app:layout_constraintTop_toBottomOf="@+id/currentVal" >

        <TextView
            android:id="@+id/vVal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/eczar_medium"
            android:gravity="center"
            android:text="@string/gettingDataText"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/voltageTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/cardBackground"
        app:cardCornerRadius="0dp"
        app:cardElevation="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/voltageVal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentTitle">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_slab_bold"
            android:gravity="center"
            android:text="@string/voltage"
            android:textColor="@color/cardText"
            android:textSize="20sp"
            tools:text="@string/voltage" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/powerDataHeader"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="400dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_slab_bold"
            android:gravity="center"
            android:text="@string/powerDetails"
            android:textColor="@color/cardText"
            android:textSize="24sp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/heightVal"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/dataCardBackground"
        app:cardCornerRadius="0dp"
        app:cardElevation="10.0dp"
        app:layout_constraintBottom_toTopOf="@+id/powerDataHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toEndOf="@+id/maxHeight"
        app:layout_constraintTop_toBottomOf="@+id/tankTwoPercentage" >

        <TextView
            android:id="@+id/tankHeight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/eczar_medium"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/maxHeight"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/cardBackground"
        app:cardCornerRadius="0dp"
        app:cardElevation="15.0dp"
        app:layout_constraintBottom_toTopOf="@+id/powerDataHeader"
        app:layout_constraintEnd_toStartOf="@+id/heightVal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tankTwoTitle">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_slab_bold"
            android:gravity="center"
            android:text="@string/maxHeight"
            android:textColor="@color/cardText"
            android:textSize="20sp"
            tools:text="@string/maxHeight" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/tankTwoPercentage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/dataCardBackground"
        app:cardCornerRadius="0dp"
        app:cardElevation="5.0dp"
        app:layout_constraintBottom_toTopOf="@+id/heightVal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tankTwoTitle"
        app:layout_constraintTop_toBottomOf="@+id/tankTwoWaterLevel" >

        <TextView
            android:id="@+id/tankTwoProgress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/eczar_medium"
            android:gravity="center"
            android:text="@string/gettingDataText"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/tankTwoWaterLevel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/dataCardBackground"
        app:cardCornerRadius="0dp"
        app:cardElevation="10.0dp"
        app:layout_constraintBottom_toTopOf="@+id/tankTwoPercentage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tankTwoTitle"
        app:layout_constraintTop_toBottomOf="@+id/tankOnePercentage" >

        <TextView
            android:id="@+id/tankTwoLvl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/eczar_medium"
            android:gravity="center"
            android:text="@string/gettingDataText"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/tankTwoTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/cardBackground"
        app:cardCornerRadius="0dp"
        app:cardElevation="15.0dp"
        app:layout_constraintBottom_toTopOf="@+id/maxHeight"
        app:layout_constraintEnd_toStartOf="@+id/tankTwoWaterLevel"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tankOneTitle">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_slab_bold"
            android:gravity="center"
            android:text="@string/secondTank"
            android:textColor="@color/cardText"
            android:textSize="24sp"
            tools:text="@string/secondTank" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/currentTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/cardBackground"
        app:cardCornerRadius="0dp"
        app:cardElevation="15dp"
        app:layout_constraintBottom_toTopOf="@+id/voltageTitle"
        app:layout_constraintEnd_toStartOf="@+id/currentVal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/powerDataHeader">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_slab_bold"
            android:gravity="center"
            android:text="@string/current"
            android:textColor="@color/cardText"
            android:textSize="20sp"
            tools:text="@string/current" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/currentVal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/dataCardBackground"
        app:cardCornerRadius="0dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toTopOf="@+id/voltageVal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/currentTitle"
        app:layout_constraintTop_toBottomOf="@+id/powerDataHeader" >

        <TextView
            android:id="@+id/cVal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/eczar_medium"
            android:gravity="center"
            android:text="@string/gettingDataText"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/waterDataHeader"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_slab_bold"
            android:gravity="center"
            android:text="@string/additionalInfo"
            android:textColor="@color/cardText"
            android:textSize="24sp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/tankOneTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/cardBackground"
        app:cardCornerRadius="0dp"
        app:cardElevation="15.0dp"
        app:layout_constraintBottom_toTopOf="@+id/tankTwoTitle"
        app:layout_constraintEnd_toStartOf="@+id/tankOneWaterLevel"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/waterDataHeader">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_slab_bold"
            android:gravity="center"
            android:text="@string/firstTank"
            android:textColor="@color/cardText"
            android:textSize="24sp"
            tools:text="@string/firstTank" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/tankOneWaterLevel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/dataCardBackground"
        app:cardCornerRadius="0dp"
        app:cardElevation="10.0dp"
        app:layout_constraintBottom_toTopOf="@+id/tankOnePercentage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tankOneTitle"
        app:layout_constraintTop_toBottomOf="@+id/waterDataHeader" >

        <TextView
            android:id="@+id/tankOneLvl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/eczar_medium"
            android:gravity="center"
            android:text="@string/gettingDataText"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/tankOnePercentage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/dataCardBackground"
        app:cardCornerRadius="0dp"
        app:cardElevation="5.0dp"
        app:layout_constraintBottom_toTopOf="@+id/tankTwoWaterLevel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tankOneTitle"
        app:layout_constraintTop_toBottomOf="@+id/tankOneWaterLevel" >

        <TextView
            android:id="@+id/tankOneProgress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/eczar_medium"
            android:gravity="center"
            android:text="@string/gettingDataText"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>